k3s/emulators/firebase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firebase
spec:
  selector: { app: firebase }
  ports:
    - { name: ui,      port: 4000, targetPort: 4000 }
    - { name: hub,     port: 4400, targetPort: 4400 }
    - { name: auth,    port: 9099, targetPort: 9099 }
    - { name: storage, port: 9199, targetPort: 9199 }
    - { name: hosting, port: 5000, targetPort: 5000 }
